plugin/src/test/resources/annotator/perl/unreachableCode/checkOrDie.code
-d or <error descr="Unreachable code">!</error>die "Not a directory: '$_'\n";
